refactor : analytics base path 통합