@@ -13,6 +13,7 @@ import jakarta.persistence.UniqueConstraint;
 import java.time.LocalDate;
 import java.time.OffsetDateTime;
 import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.List;
 import java.util.UUID;
 
@@ -45,6 +46,7 @@ public class Big3Selection {
     private List<Big3SelectionItem> selectedItems = new ArrayList<>();
 
     protected Big3Selection() {
+
     }
 
     private Big3Selection(String id, String userId, LocalDate selectedDate, OffsetDateTime selectedAt) {
@@ -69,7 +71,7 @@ public class Big3Selection {
      */
     public void replaceItems(List<InboxItem> inboxItems, OffsetDateTime selectedAt) {
         this.selectedAt = selectedAt;
-        selectedItems.sort((left, right) -> Integer.compare(left.getSortOrder(), right.getSortOrder()));
+        selectedItems.sort(Comparator.comparingInt(Big3SelectionItem::getSortOrder));
 
         int sharedSize = Math.min(selectedItems.size(), inboxItems.size());
         for (int index = 0; index < sharedSize; index++) {
@@ -77,7 +79,7 @@ public class Big3Selection {
         }
 
         while (selectedItems.size() > inboxItems.size()) {
-            selectedItems.remove(selectedItems.size() - 1);
+            selectedItems.removeLast();
         }
 
         for (int index = sharedSize; index < inboxItems.size(); index++) {
